исправила ошибки первые

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <img class="logo_image" src="./images/logo-black.svg" alt="Логотип"/>
       </a>
       <address class="address">
-          <a href="tel:+9 999 555 5555" class="address_underline">+9 999 555 5555</a><br>
-          <a href="mailto:info@sobaka.ge" class="address_underline">info@sobaka.ge</a><br>
+          <a href="#" class="address_underline">+9 999 555 5555</a><br>
+          <a href="#" class="address_underline">info@sobaka.ge</a><br>
           <p> наб. Принсенграхт 263-<br>
             265, Амстердам</p>
       </address>
@@ -40,9 +40,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <div class="aligned-text">о<span class="letter-spacing-extended">но</span></div>
-          <div class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></div>
-          <div class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></div>
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
         <button class="bet-button">Сделать ставку</button>
@@ -86,7 +86,7 @@
     <section class="about">
       <div class="about__column">
         <div class="about__logo">
-        <img class="about__logo-image" src="/images/logo-white.svg" alt="логотип оно тебе надо"/>
+        <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип оно тебе надо"/>
         </div>
       </div>
       <div class="about__column">
@@ -98,8 +98,8 @@
     </section>
     <footer class="footer">
       <address class="address">
-        <a href="tel:+9 999 555 5555" class="address_underline">+9 999 555 5555</a><br>
-        <a href="mailto:info@sobaka.ge" class="address_underline">info@sobaka.ge</a><br>
+        <a href="#" class="address_underline">+9 999 555 5555</a><br>
+        <a href="#" class="address_underline">info@sobaka.ge</a><br>
         <p> наб. Принсенграхт 263-<br>
           265, Амстердам</p>
       </address>
@@ -119,15 +119,15 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#"></a>
-          <img class="footer__social-icon" src="/images/yt.svg" alt="ссылка на YouTube">
+          <img class="footer__social-icon" src="./images/yt.svg" alt="ссылка на YouTube">
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#"></a>
-          <img class="footer__social-icon" src="/images/vk.svg" alt="ссылка на Вконтакте">
+          <img class="footer__social-icon" src="./images/vk.svg" alt="ссылка на Вконтакте">
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#"></a>
-          <img class="footer__social-icon" src="/images/pinterest.svg" alt="ссылка на pinterest">
+          <img class="footer__social-icon" src="./images/pinterest.svg" alt="ссылка на pinterest">
         </li>
       </ul>
     </footer>
