--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a href="#" class="header__link_active">главная</a>
+            <a href="#0" class="header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#">посмотреть лоты</a>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -29,8 +29,8 @@
           <img class="logo_image" src="./images/logo-black.svg" alt="Логотип"/>
       </a>
       <address class="address">
-          <a href="#" class="address_underline">+9 999 555 5555</a><br>
-          <a href="#" class="address_underline">info@sobaka.ge</a><br>
+          <a href="#0" class="address_underline">+9 999 555 5555</a><br>
+          <a href="#0" class="address_underline">info@sobaka.ge</a><br>
           <p> наб. Принсенграхт 263-<br>
             265, Амстердам</p>
       </address>
@@ -53,7 +53,7 @@
       <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
-          <a class="card-link" href="#">
+          <a class="card-link" href="#0">
             <article class="card card_type_film">
               <div class="card__overlay"></div>
               <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="lots__card-list-item">
-          <a class="card-link" href="#">
+          <a class="card-link" href="#0">
             <article class="card card_type_book">
               <div class="card__overlay"></div>
               <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li class="lots__card-list-item">
-          <a class="card-link" href="#">
+          <a class="card-link" href="#0">
             <article class="card card_type_picture">
               <div class="card__overlay"></div>
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
@@ -80,7 +80,7 @@
           </a>
         </li>
       </ul>
-      <a class="lots__look-more-link" href="#">посмотреть больше</a>
+      <a class="lots__look-more-link" href="#0">посмотреть больше</a>
     </section>
 
     <section class="about">
@@ -98,35 +98,35 @@
     </section>
     <footer class="footer">
       <address class="address">
-        <a href="#" class="address_underline">+9 999 555 5555</a><br>
-        <a href="#" class="address_underline">info@sobaka.ge</a><br>
+        <a href="#0" class="address_underline">+9 999 555 5555</a><br>
+        <a href="#0" class="address_underline">info@sobaka.ge</a><br>
         <p> наб. Принсенграхт 263-<br>
           265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="#" class="footer__menu-link footer__menu-link_active">главная</a>
+            <a href="#0" class="footer__menu-link footer__menu-link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#" class="footer__menu-link">посмотреть лоты</a>
+            <a href="#0" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#" class="footer__menu-link">об аукционе</a>
+            <a href="#0" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"></a>
+          <a class="footer__social-link" href="#0"></a>
           <img class="footer__social-icon" src="./images/yt.svg" alt="ссылка на YouTube">
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"></a>
+          <a class="footer__social-link" href="#0"></a>
           <img class="footer__social-icon" src="./images/vk.svg" alt="ссылка на Вконтакте">
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"></a>
+          <a class="footer__social-link" href="#0"></a>
           <img class="footer__social-icon" src="./images/pinterest.svg" alt="ссылка на pinterest">
         </li>
       </ul>
