--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <img class="logo_image" src="./images/logo-black.svg" alt="Логотип"/>
       </a>
       <address class="address">
-          <a href="#0" class="address_underline">+9 999 555 5555</a><br>
-          <a href="#0" class="address_underline">info@sobaka.ge</a><br>
+          <a href="tel:+99995555555" class="address_underline">+9 999 555 5555</a><br>
+          <a href="mailto:info@sobaka.ge" class="address_underline">info@sobaka.ge</a><br>
           <p> наб. Принсенграхт 263-<br>
             265, Амстердам</p>
       </address>
@@ -98,8 +98,8 @@
     </section>
     <footer class="footer">
       <address class="address">
-        <a href="#0" class="address_underline">+9 999 555 5555</a><br>
-        <a href="#0" class="address_underline">info@sobaka.ge</a><br>
+        <a href="tel:+99995555555" class="address_underline">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge" class="address_underline">info@sobaka.ge</a><br>
         <p> наб. Принсенграхт 263-<br>
           265, Амстердам</p>
       </address>
